# SQL_Arena

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py
server/: __init__.py  app.py  requirements.txt  sql_arena_environment.py
